--- a/.gitignore
+++ b/.gitignore
@@ -85,7 +85,7 @@ Device-Release/
 
 # Ignore files created by create_project.py
 projects/shaderLearning/
-
+projects/MenuTest
 # Ignore config files in javascript bindings generator
 tools/tojs/user.cfg
 # ... userconf.ini generated if running from tools/tojs
