--- a/projects/cocos2dx/proj.win32/cocos2dx.vcxproj
+++ b/projects/cocos2dx/proj.win32/cocos2dx.vcxproj
@@ -76,7 +76,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>$(EngineRoot)cocos\audio\include;$(EngineRoot)external;$(EngineRoot)external/json;$(EngineRoot)external/chipmunk/include/chipmunk;$(EngineRoot)extensions;$(EngineRoot)cocos/ui;$(EngineRoot)cocos/editor-support/cocostudio/ActionTimeline;$(EngineRoot)external/Box2D;..\Classes\;../Classes/ResMgr;../Classes/Scene;../Classes/SceneManager;../Classes/Shader;../Classes/Ball;..\Classes;..;%(AdditionalIncludeDirectories);$(_COCOS_HEADER_WIN32_BEGIN);$(_COCOS_HEADER_WIN32_END)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(EngineRoot)cocos\2d;$(EngineRoot)cocos\audio\include;$(EngineRoot)external;$(EngineRoot)external/json;$(EngineRoot)external/chipmunk/include/chipmunk;$(EngineRoot)extensions;$(EngineRoot)cocos/ui;$(EngineRoot)cocos/editor-support/cocostudio/ActionTimeline;$(EngineRoot)external/Box2D;..\Classes\;../Classes/ResMgr;../Classes/Scene;../Classes/SceneManager;../Classes/Shader;../Classes/MsgCenter;../Classes/Ball;..\Classes;..;%(AdditionalIncludeDirectories);$(_COCOS_HEADER_WIN32_BEGIN);$(_COCOS_HEADER_WIN32_END)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USE_MATH_DEFINES;GL_GLEXT_PROTOTYPES;COCOS2D_DEBUG;CC_ENABLE_CHIPMUNK_INTEGRATION=1;COCOS2D_DEBUG=1;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>false</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -144,6 +144,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y</Command>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\MsgCenter\MsgCenter.cpp" />
     <ClCompile Include="..\Classes\ResMgr\ResMgr.cpp" />
     <ClCompile Include="..\Classes\SceneManager\SceneManager.cpp" />
     <ClCompile Include="..\Classes\Scene\MainMenu.cpp" />
@@ -156,6 +157,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y</Command>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\MsgCenter\MsgCenter.h" />
     <ClInclude Include="..\Classes\MyGameDef.h" />
     <ClInclude Include="..\Classes\MyResource.h" />
     <ClInclude Include="..\Classes\ResMgr\ResMgr.h" />
