--- a/projects/cocos2dx/Resources/images/package/share.plist
+++ b/projects/cocos2dx/Resources/images/package/share.plist
@@ -7,7 +7,7 @@
             <key>images/share/CloseNormal.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,324},{40,40}}</string>
+                <string>{{418,324},{40,40}}</string>
                 <key>offset</key>
                 <string>{0,0}</string>
                 <key>rotated</key>
@@ -20,7 +20,7 @@
             <key>images/share/CloseSelected.png</key>
             <dict>
                 <key>frame</key>
-                <string>{{2,366},{38,38}}</string>
+                <string>{{460,324},{38,38}}</string>
                 <key>offset</key>
                 <string>{0,1}</string>
                 <key>rotated</key>
@@ -29,6 +29,32 @@
                 <string>{{1,0},{38,38}}</string>
                 <key>sourceSize</key>
                 <string>{40,40}</string>
+            </dict>
+            <key>images/share/ForceBarBG.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,324},{312,20}}</string>
+                <key>offset</key>
+                <string>{-5,90}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{179,200},{312,20}}</string>
+                <key>sourceSize</key>
+                <string>{680,600}</string>
+            </dict>
+            <key>images/share/ForceBarFG.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,346},{306,16}}</string>
+                <key>offset</key>
+                <string>{-5,91}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{182,201},{306,16}}</string>
+                <key>sourceSize</key>
+                <string>{680,600}</string>
             </dict>
             <key>images/share/HelloWorld.png</key>
             <dict>
@@ -43,6 +69,32 @@
                 <key>sourceSize</key>
                 <string>{480,320}</string>
             </dict>
+            <key>images/share/RedBall.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{316,324},{100,100}}</string>
+                <key>offset</key>
+                <string>{0,0}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{0,0},{100,100}}</string>
+                <key>sourceSize</key>
+                <string>{100,100}</string>
+            </dict>
+            <key>images/share/WhiteBall.png</key>
+            <dict>
+                <key>frame</key>
+                <string>{{2,364},{219,221}}</string>
+                <key>offset</key>
+                <string>{2,-1}</string>
+                <key>rotated</key>
+                <false/>
+                <key>sourceColorRect</key>
+                <string>{{5,3},{219,221}}</string>
+                <key>sourceSize</key>
+                <string>{225,225}</string>
+            </dict>
         </dict>
         <key>metadata</key>
         <dict>
@@ -51,9 +103,9 @@
             <key>realTextureFileName</key>
             <string>share.png</string>
             <key>size</key>
-            <string>{512,512}</string>
+            <string>{512,1024}</string>
             <key>smartupdate</key>
-            <string>$TexturePacker:SmartUpdate:cd8e94a938288a70c46ee6f097eb3973:1/1$</string>
+            <string>$TexturePacker:SmartUpdate:1ad7f915a61540a131d5467951693188:1/1$</string>
             <key>textureFileName</key>
             <string>share.png</string>
         </dict>
