--- a/projects/cocos2dx/proj.win32/cocos2dx.vcxproj
+++ b/projects/cocos2dx/proj.win32/cocos2dx.vcxproj
@@ -143,6 +143,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\Ball\Ball.cpp" />
     <ClCompile Include="..\Classes\HelloWorldScene.cpp" />
     <ClCompile Include="..\Classes\MsgCenter\MsgCenter.cpp" />
     <ClCompile Include="..\Classes\ResMgr\ResMgr.cpp" />
@@ -156,6 +157,7 @@ xcopy "$(ProjectDir)..\Resources" "$(OutDir)" /D /E /I /F /Y</Command>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
+    <ClInclude Include="..\Classes\Ball\Ball.h" />
     <ClInclude Include="..\Classes\HelloWorldScene.h" />
     <ClInclude Include="..\Classes\MsgCenter\MsgCenter.h" />
     <ClInclude Include="..\Classes\MyGameDef.h" />
