--- a/projects/cocos2dx/proj.win32/cocos2dx.vcxproj
+++ b/projects/cocos2dx/proj.win32/cocos2dx.vcxproj
@@ -78,7 +78,7 @@
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>$(EngineRoot)cocos\2d;$(EngineRoot)cocos\audio\include;$(EngineRoot)external;$(EngineRoot)external/json;$(EngineRoot)external/chipmunk/include/chipmunk;$(EngineRoot)extensions;$(EngineRoot)cocos/ui;$(EngineRoot)cocos/editor-support/cocostudio/ActionTimeline;$(EngineRoot)external/Box2D;..\Classes\;../Classes/ResMgr;../Classes/Scene;../Classes/SceneManager;../Classes/Shader;../Classes/MsgCenter;../Classes/Ball;..\Classes;..;%(AdditionalIncludeDirectories);$(_COCOS_HEADER_WIN32_BEGIN);$(_COCOS_HEADER_WIN32_END)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USE_MATH_DEFINES;GL_GLEXT_PROTOTYPES;COCOS2D_DEBUG;CC_ENABLE_CHIPMUNK_INTEGRATION=1;COCOS2D_DEBUG=1;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <MinimalRebuild>false</MinimalRebuild>
+      <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <PrecompiledHeader>
